--- a/student/templates/student/base1.html
+++ b/student/templates/student/base1.html
@@ -136,9 +136,12 @@
               <a class="nav-link" href="/result">RESULT</a>
             </li>
             {% endif %}
+            {% if ea.display_exam %}
             <li class="nav-item">
               <a class="nav-link active" href="{% url 'exam:home' %}">EXAM</a>
             </li>
+            {% endif %}
+            {% if ea.display_account %}
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle active" href="#" id="account-dropdown" role="button"
                 data-bs-toggle="dropdown" aria-expanded="false">
@@ -153,6 +156,7 @@
                 {% endif %}
               </ul>
             </li>
+            {% endif %}
           </ul>
         </div>
       </div>
