--- a/static/student/css/style.css
+++ b/static/student/css/style.css
@@ -193,7 +193,14 @@ position: relative;
   width:715px
 }
 
+.course-box{
+  height: 150px!important;
+  width: 150px !important;
+}
 
 @media only screen and (max-width: 600px) {
-
+.course-box{
+  height:100px !important;
+  width: 200px !important;
+}
 }
