--- a/student/templates/student/home.html
+++ b/student/templates/student/home.html
@@ -7,119 +7,116 @@
 {% endblock css %}
 
 {% block content %}
- 
 
-    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="{% static "student/image/slide1.jpg" %}" class="d-block w-100" alt="...">
-          </div>
-          <div class="carousel-item">
-            <img src="{% static "student/image/slide2.jpg" %}" class="d-block w-100" alt="...">
-          </div>
-     
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
+
+<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="{% static " student/image/slide1.jpg" %}" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="{% static " student/image/slide2.jpg" %}" class="d-block w-100" alt="...">
     </div>
 
-      <div class="container">
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
 
-      <div class="col-container my-2">
-        <div class="row" style="height: 100px; background-color: rgba(255,0,0,0.1);">
-          <button type="button" class="btn btn-primary btn-square-md h-100 d-inline-block col-2" >Primary</button>  
-          <button type="button" class="btn btn-secondary btn-square-md h-100 d-inline-block col-2">Secondary</button>
-          <button type="button" class="btn btn-success btn-square-md h-100 d-inline-block col-2">Success</button>
-          <button type="button" class="btn btn-danger btn-square-md h-100 d-inline-block col-2">Danger</button>
-          <button type="button" class="btn btn-warning btn-square-md h-100 d-inline-block col-2">Warning</button>
-          <button type="button" class="btn btn-warning btn-square-md h-100 d-inline-block col-2">Info</button>
+<div class="container">
+
+  <div class="col-container my-2">
+    <div class="row" style="height: 100px; background-color: rgba(255,0,0,0.1);">
+      <button type="button" class="btn btn-primary btn-square-md h-100 d-inline-block col-2">Primary</button>
+      <button type="button" class="btn btn-secondary btn-square-md h-100 d-inline-block col-2">Secondary</button>
+      <button type="button" class="btn btn-success btn-square-md h-100 d-inline-block col-2">Success</button>
+      <button type="button" class="btn btn-danger btn-square-md h-100 d-inline-block col-2">Danger</button>
+      <button type="button" class="btn btn-warning btn-square-md h-100 d-inline-block col-2">Warning</button>
+      <button type="button" class="btn btn-warning btn-square-md h-100 d-inline-block col-2">Info</button>
+    </div>
+  </div>
+
+
+  <div class="card-group">
+    <div class="card">
+      <img src="{% static 'student/image/regular courses.jpg' %}" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">REGULAR COURSES</h5>
+        <p class="card-text">Comming soon. </br> <b> <a href="">Read More</a></b></p>
       </div>
+    </div>
+    <div class="card">
+      <img src="{% static 'student/image/alumini.jpg' %}" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">ALUMINI</h5>
+        <p class="card-text">St. Aloysius International University boasts of a successful alumnus.... </br> <b> <a
+              href="">Read More</a></b></p>
       </div>
-
-
-      <div class="card-group">
-        <div class="card">
-          <img src="{% static 'student/image/regular courses.jpg' %}" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">REGULAR COURSES</h5>
-            <p class="card-text">Comming soon. </br> <b> <a href="">Read More</a></b></p>
-          </div>
-        </div>
-        <div class="card">
-          <img src="{% static 'student/image/alumini.jpg' %}" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">ALUMINI</h5>
-            <p class="card-text">St. Aloysius International University boasts of a successful alumnus.... </br> <b> <a href="">Read More</a></b></p>
-          </div>
-        </div>
-        <div class="card">
-          <img src="{% static 'student/image/academics.jpg' %}" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">ACADEMICS</h5>
-            <p class="card-text">St Aloysius International University provides a wide range of courses... </br> <b> <a href="">Read More</a></b></p>
-          </div>
-        </div>
-        <div class="card">
-          <img src="{% static 'student/image/enquiries.jpg' %}" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">ENQUIRIES</h5>
-            <p class="card-text">Coming soon. </br> <b> <a href="">Read More</a></b></p>
-          </div>
-        </div>
+    </div>
+    <div class="card">
+      <img src="{% static 'student/image/academics.jpg' %}" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">ACADEMICS</h5>
+        <p class="card-text">St Aloysius International University provides a wide range of courses... </br> <b> <a
+              href="">Read More</a></b></p>
       </div>
-      <hr>
+    </div>
+    <div class="card">
+      <img src="{% static 'student/image/enquiries.jpg' %}" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">ENQUIRIES</h5>
+        <p class="card-text">Coming soon. </br> <b> <a href="">Read More</a></b></p>
+      </div>
+    </div>
+  </div>
+  <hr>
 
 
-     
-      <div class="container my-2" >
-        <div class="row">
-          <div class="col-6">
-            <h5>WELCOME TO <br>
-              ST. ALOYSIUS INTERNATIONAL UNIVERSITY !</h5>
-            <img src="{% static 'student/image/img1.jpg' %}" class="card-img-top" alt="...">
-            <h5>We are among the leading research and teaching institutions of the world!</h5>
-            <p >
-              Founded in 1996, St. Aloysius International University aims at training its residents for personal and professional success in today's society. Our competent teaching staffs strive to bring out the best in our students, which has been responsible for the fantastic results we produce year after year. Our expert representatives scout the world with information about our courses and infrastructure to help international students make well-informed decisions about their higher education. We offer courses in the SSA scheme, which allows our students to complete a part of their degree in the St. Aloysius campus.</p>
-              <p class="readmore"><a href="/web/20200216201829/http://www.saiuedu.in/courses.html" title="Read more">Read more</a></p>
 
-          </div>
-          <div class="col-3">
-            <h5>E-BOOKS</h5>
-            <img src="{% static 'student/image/education.jpg' %}" class="card-img-top" alt="...">
-            Variable width content
-          </div>
-          <div class=" col-3">
-            <h6>NEWS AND EVENTS</h6>
-            <div class="card mb-3" style="max-width: 540px;">
-              <div class="row g-0">
-                <div class="col-md-4">
-                  <img src="{% static 'student/image/img2.jpeg' %}" class="img-fluid rounded-start" alt="...">
-                </div>
-                <div class="col-md-8">
-                    <p class="card-text">Comming Soon</p>
-                </div>
-              </div>
+  <div class="container my-2">
+    <div class="row">
+      <div class="col-6">
+        <h5>WELCOME TO <br>
+          ST. ALOYSIUS INTERNATIONAL UNIVERSITY !</h5>
+        <img src="{% static 'student/image/img1.jpg' %}" class="card-img-top" alt="...">
+        <h5>We are among the leading research and teaching institutions of the world!</h5>
+        <p>
+          Founded in 1996, St. Aloysius International University aims at training its residents for personal and
+          professional success in today's society. Our competent teaching staffs strive to bring out the best in our
+          students, which has been responsible for the fantastic results we produce year after year. Our expert
+          representatives scout the world with information about our courses and infrastructure to help international
+          students make well-informed decisions about their higher education. We offer courses in the SSA scheme, which
+          allows our students to complete a part of their degree in the St. Aloysius campus.</p>
+        <p class="readmore"><a href="/web/20200216201829/http://www.saiuedu.in/courses.html" title="Read more">Read
+            more</a></p>
+
+      </div>
+      <div class="col-3">
+        <h5>E-BOOKS</h5>
+        <img src="{% static 'student/image/education.jpg' %}" class="card-img-top" alt="...">
+        Variable width content
+      </div>
+      <div class=" col-3">
+        <h6>NEWS AND EVENTS</h6>
+        <div class="card mb-3" style="max-width: 540px;">
+          <div class="row g-0">
+            <div class="col-md-4">
+              <img src="{% static 'student/image/img2.jpeg' %}" class="img-fluid rounded-start" alt="...">
+            </div>
+            <div class="col-md-8">
+              <p class="card-text">Comming Soon</p>
             </div>
           </div>
         </div>
-
       </div>
-
-      
-
-        
-
-
-
-
-      
-
+    </div>
+  </div>
 
 
 
@@ -133,7 +130,7 @@
 
 
 
-{% comment %} 
+{% comment %}
 <footer class="text-center text-white " style="background-color: #21081a;">
   <!-- Grid container -->
   <div class="container p-4"></div>
@@ -141,7 +138,7 @@
 
   <!-- Copyright -->
   <div class="text-center p-2" style="background-color: rgba(0, 0, 0, 0.2);">
-    Copyright © 2015 
+    Copyright © 2015
     <a class="text-white" href="https://saiu-edu.in/">St. Aloysius. All Rights Reserved.</a>
   </div>
   <!-- Copyright -->
@@ -158,34 +155,22 @@
     <!-- Section: Social media -->
     <section class="mb-4">
       <!-- Facebook -->
-      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-        ><i class="fab fa-facebook-f"></i
-      ></a>
+      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-facebook-f"></i></a>
 
       <!-- Twitter -->
-      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-        ><i class="fab fa-twitter"></i
-      ></a>
+      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-twitter"></i></a>
 
       <!-- Google -->
-      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-        ><i class="fab fa-google"></i
-      ></a>
+      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-google"></i></a>
 
       <!-- Instagram -->
-      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-        ><i class="fab fa-instagram"></i
-      ></a>
+      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-instagram"></i></a>
 
       <!-- Linkedin -->
-      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-        ><i class="fab fa-linkedin-in"></i
-      ></a>
+      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-linkedin-in"></i></a>
 
       <!-- Github -->
-      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-        ><i class="fab fa-github"></i
-      ></a>
+      <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"><i class="fab fa-github"></i></a>
     </section>
     <!-- Section: Social media -->
 
@@ -338,12 +323,6 @@
   <!-- Copyright -->
 </footer>
 <!-- Footer -->
-
-
-
-
-
-
 
 
 {% endblock content %}
